--- a/main.html
+++ b/main.html
@@ -104,6 +104,12 @@
           </div>
         </div>
       </div>
+      <img
+        src="./assets/arrow.png"
+        alt="Arrow icon"
+        class="icon arrow"
+        onclick="location.href='./#experience'"
+      />
     </section>
     <section id="experience">
       <h1 class="title">Experience</h1>
@@ -192,6 +198,12 @@
           </div>
         </div>
       </div>
+      <img
+        src="./assets/arrow.png"
+        alt="Arrow icon"
+        class="icon arrow"
+        onclick="location.href='./#experience'"
+      />
     </section>
     <section id="projects">
       <h1 class="title">Projects</h1>
@@ -250,6 +262,12 @@
           </div>
         </div>
       </div>
+      <img
+        src="./assets/arrow.png"
+        alt="Arrow icon"
+        class="icon arrow"
+        onclick="location.href='./#experience'"
+      />
     </section>
     <section id="contact">
       <h1 class="title">Contact Me</h1>
