--- a/main.html
+++ b/main.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Alisa Phill Personal Website</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -116,7 +117,7 @@
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container">
-            <h2 class="experience-sub-title">Software Development Intern</h2>
+            <h2 class="experience-sub-title">Software Development Intern</h2> 
             <div class="article-container">
               <article>
                 <img
@@ -278,7 +279,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a></p>
+          <p><a href="mailto:alisaphill5@gmail.com">Example@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
@@ -301,6 +302,7 @@
           </ul>
         </div>
       </nav>
+      <p>Copyright &#169; 2024 Alisa Phill.</p>
     </footer>
     <script src="script.js"></script>
   </body>
